<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">启目</string>
    <string name="login_success_tip">
            欢迎你使用启目App,如果您配备
        了云微投，请绑定设备，贵公司
        平台下发的培训，产品等资料文档会自动
        更新到我的工作，并同步到你绑定的云微投中。
        有任何问题你可以进入QQ群:454137604
        或者拨打电话:400-882-3060垂询。

    </string>
    <string-array name="tab_title">
        <item>我的工作</item>
        <item>晨会签到</item>
        <item>客户拜访</item>
        <item>个人中心</item>
    </string-array>
    <string name="audio_size">大小:%1$s</string>
    <string name="delete_audio">你确定删除"%1$s"吗?</string>
    <string name="hello_world" tools:ignore="MissingTranslation">Hello world!</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="exit_tip" tools:ignore="MissingTranslation">再按一次退出！</string>
    <string name="app_tip" tools:ignore="MissingTranslation">投屏盒子列表</string>
    <string name="live_broadcast" tools:ignore="MissingTranslation">还有服务器没显示?试试扫码功能</string>
    <string name="scan_broadcast" tools:ignore="MissingTranslation">正在扫描服务器，请稍等</string>
    <string name="clinet_name" tools:ignore="MissingTranslation">兴图快投</string>
    <string name="is_play" tools:ignore="MissingTranslation">是否开始</string>
    <string name="is_lock" tools:ignore="MissingTranslation">是否有锁</string>
    <string name="play_fail" tools:ignore="MissingTranslation">点播失败</string>
    <string name="client_refurbish_lose" tools:ignore="MissingTranslation">没有发现附近的设备</string>
    <string name="clinet_refurbish_success" tools:ignore="MissingTranslation">刷新成功</string>
    <string name="box_name" tools:ignore="MissingTranslation">盒子名称:</string>
    <string name="zbzxing" tools:ignore="MissingTranslation">分享</string>
    <string name="server_list" tools:ignore="MissingTranslation">附近的设备</string>
    <string name="share_to" tools:ignore="MissingTranslation">分享</string>
    <string name="input_ip" tools:ignore="MissingTranslation">输入盒子的IP地址</string>
    <string name="sure" tools:ignore="MissingTranslation">连接</string>
    <string name="addBOX" tools:ignore="MissingTranslation">增加盒子...</string>
    <string name="inputIp" tools:ignore="MissingTranslation">请输入IP地址...</string>
    <string name="cancel" tools:ignore="MissingTranslation">取消</string>
    <string name="ok" tools:ignore="MissingTranslation">确认</string>
    <string name="share_qr" tools:ignore="MissingTranslation">分享盒子IP地址</string>
    <string name="net_noconnect" tools:ignore="MissingTranslation">亲，网络没有连接！</string>
    <string name="press_again_exit" tools:ignore="MissingTranslation">再次点击，退出启目</string>
    <string name="research" tools:ignore="MissingTranslation">搜\t\t索</string>
    <string name="reconnect" tools:ignore="MissingTranslation">重试</string>
    <string name="nearby_nobox" tools:ignore="MissingTranslation">请下拉刷新搜索好友终端！</string>
    <string name="nearby_nobox2" tools:ignore="MissingTranslation">请连接wifi或者开启热点共享网络！</string>
    <string name="seach_safe_mode" tools:ignore="MissingTranslation">点击扫一扫连接好友终端！</string>
    <string name="input_count" tools:ignore="MissingTranslation"><Data>正在连接&lt;font color=#ff8800>%s&lt;/font></Data></string>
    <string name="connect_error" tools:ignore="MissingTranslation"><Data>亲，&lt;font color=#ff8800>%s&lt;/font>不能连接</Data></string>
    <string name="play_error" tools:ignore="MissingTranslation"><Data>亲，&lt;font color=#ff8800>%s&lt;/font>不能分享,请重试！</Data></string>
    <string name="play_fame" tools:ignore="MissingTranslation"><Data>正在分享&lt;font color=#ff8800>%s&lt;/font></Data></string>
    <string name="connect_share" tools:ignore="MissingTranslation"><Data>亲，你退出了&lt;font color=#ff8800>%s&lt;/font>的分享</Data></string>
    <string name="cancel_connect" tools:ignore="MissingTranslation"><Data>亲，你取消了&lt;font color=#ff8800>%s&lt;/font>的连接</Data></string>
    <string name="exit_app" tools:ignore="MissingTranslation">确定要退出当前分享？</string>
    <string name="other_box" tools:ignore="MissingTranslation">发现了其他的兴图盒子，点击</string>
    <string name="check" tools:ignore="MissingTranslation">查看</string>
    <string name="nearby_box" tools:ignore="MissingTranslation">附近盒子列表</string>
    <string name="retry" tools:ignore="MissingTranslation">设置</string>
    <string name="skip" tools:ignore="MissingTranslation">提示</string>
    <string name="close" tools:ignore="MissingTranslation">关\t\t闭</string>
    <string name="end_play" tools:ignore="MissingTranslation"><Data>分享已结束\t&lt;font color=#ff8800>%s&lt;/font>秒内自动关闭</Data></string>
    <string name="nearby" tools:ignore="MissingTranslation">搜索附近的设备...</string>
    <string name="nearby2" tools:ignore="MissingTranslation">搜索附近的手机...</string>
    <string name="close_tp" tools:ignore="MissingTranslation">确定关闭当前投屏？</string>
    <string name="wifi_tip" tools:ignore="MissingTranslation">当前暂无网络连接,请先连接Wi-Fi?</string>
    <string name="file_load" tools:ignore="MissingTranslation">是否允许共享的文件被下载？</string>
    <string name="connect_wifi" tools:ignore="MissingTranslation">连接Wi-Fi</string>
    <string name="close_tp_tip" tools:ignore="MissingTranslation">设备正在投屏中，无法进行分享操作，是否关闭当前投屏？</string>
    <string name="close_tp_tip4" tools:ignore="MissingTranslation">设备正在投屏中，无法进行模式切换操作，是否关闭当前投屏？</string>
    <string name="close_tp_tip2" tools:ignore="MissingTranslation">设备正在投屏中，无法进行远程控制操作，是否关闭当前投屏？</string>
    <string name="close_tp_tip3" tools:ignore="MissingTranslation">设备正在投屏中，无法进行文件分享操作，是否关闭当前投屏？</string>
    <string name="close_tp_tip5" tools:ignore="MissingTranslation">设备正在投屏中，无法进行当前操作，是否关闭当前投屏？</string>
    <string name="yes" tools:ignore="MissingTranslation">是</string>
    <string name="close_share_tip" tools:ignore="MissingTranslation">确定退出当前分享吗？</string>
    <string name="close_share" tools:ignore="MissingTranslation">退出</string>
    <string name="touping" tools:ignore="MissingTranslation">正在投屏</string>
    <string name="controlimg" tools:ignore="MissingTranslation">正在远控</string>
    <string name="shareimg" tools:ignore="MissingTranslation">正在分享</string>
    <string name="cancelimg" tools:ignore="MissingTranslation">正在取消下载...</string>
    <string name="cancelimg2" tools:ignore="MissingTranslation">正在取消加载...</string>
    <string name="sharefile" tools:ignore="MissingTranslation">共享文件</string>
    <string name="uploadfile" tools:ignore="MissingTranslation">上传文件</string>
    <string name="downloadfile" tools:ignore="MissingTranslation">下载文件</string>
    <string name="getremotefile" tools:ignore="MissingTranslation">读取远程文件</string>
    <string name="passwd_verify" tools:ignore="MissingTranslation">密码验证</string>
    <string name="readfile" tools:ignore="MissingTranslation">正在读取远程文件</string>
    <string name="getDir" tools:ignore="MissingTranslation">获取相册数据</string>
    <string name="getDir2" tools:ignore="MissingTranslation">获取文件夹数据</string>
    <string name="exception" tools:ignore="MissingTranslation">已退出我的投屏</string>
    <string name="exception3" tools:ignore="MissingTranslation">投屏失败，请重试</string>
    <string name="exception2" tools:ignore="MissingTranslation">当前网络环境差，投屏失败，请重试</string>
    <string name="version_higher" tools:ignore="MissingTranslation">亲，您的Android系统低于5.0，请使用系统自带的多屏互动操作开启投屏!</string>
    <string name="version_self" tools:ignore="MissingTranslation">请使用系统自带的多屏互动操作开启投屏!</string>
    <string name="without_selected_device" tools:ignore="MissingTranslation">当前没有选中的设备!</string>
    <string name="must_choose" tools:ignore="MissingTranslation">取消后不能投屏!</string>
    <string name="no_response" tools:ignore="MissingTranslation">请求超时</string>
    <string name="no_response2" tools:ignore="MissingTranslation">当前网络环境差，分享失败，请重试</string>
    <string name="no_response3" tools:ignore="MissingTranslation">当前网络环境差，无法进行远程控制，请稍后重试</string>
    <string name="clear_carche" tools:ignore="MissingTranslation">清除缓存成功</string>
    <string name="just_one_can_share" tools:ignore="MissingTranslation">只能分享一个设备</string>
    <string name="just_one_can_control" tools:ignore="MissingTranslation">只能控制一个设备</string>
    <string name="just_one_can_fileshare" tools:ignore="MissingTranslation">只能共享一个设备</string>
    <string name="name_needed" tools:ignore="MissingTranslation">名称不能为空</string>
    <string name="try_again" tools:ignore="MissingTranslation">屏幕投屏功能可能断线了，请重新投屏！</string>
    <string name="error_password" tools:ignore="MissingTranslation">密码错误，请重新输入</string>
    <string name="unable_yk" tools:ignore="MissingTranslation">对不起，当前连接的设备不允许进行远控</string>
    <string name="tp_success" tools:ignore="MissingTranslation">投屏成功</string>
    <string name="tp_cut" tools:ignore="MissingTranslation">投屏被其它终端覆盖</string>
    <string name="tp_forbidde" tools:ignore="MissingTranslation">正在进行其他操作，不能投屏</string>
    <string name="can_run" tools:ignore="MissingTranslation">亲，app只能在手机设备运行</string>
    <string name="be_shared" tools:ignore="MissingTranslation">分享了您的屏幕</string>
    <string name="exit_shared" tools:ignore="MissingTranslation">退出了分享界面</string>
    <string name="tp_now" tools:ignore="MissingTranslation">程序正在投屏</string>
    <string name="password_changed" tools:ignore="MissingTranslation">修改了密码</string>
    <string name="not_open" tools:ignore="MissingTranslation">的我的投屏没有打开！</string>
    <string name="tp_c" tools:ignore="MissingTranslation">投 屏</string>
    <string name="stop_c" tools:ignore="MissingTranslation">停止</string>
    <string name="hide_c" tools:ignore="MissingTranslation">隐藏</string>
    <string name="tp_c2" tools:ignore="MissingTranslation">你的设备正在共享</string>
    <string name="tp_m" tools:ignore="MissingTranslation">屏幕分享</string>
    <string name="is_exited" tools:ignore="MissingTranslation">是否退出分享?</string>
    <string name="text_state1" tools:ignore="MissingTranslation">手机互动分享</string>
    <string name="text_state2" tools:ignore="MissingTranslation">投任盒/任屏</string>
    <string name="setting_success" tools:ignore="MissingTranslation">设置成功</string>
    <string name="logo_info" tools:ignore="MissingTranslation">Copyright © 启目科技</string>
    <string name="qingxi" tools:ignore="MissingTranslation">清晰度:</string>
    <string name="gaoqing" tools:ignore="MissingTranslation">高清</string>
    <string name="biaoqing" tools:ignore="MissingTranslation">标清</string>
    <string name="tpsetting" tools:ignore="MissingTranslation">投屏设置</string>
    <string name="clearcache" tools:ignore="MissingTranslation">清除缓存</string>
    <string name="connect_auto" tools:ignore="MissingTranslation">自动连接（默认扫码连接）</string>
    <string name="settingsearch" tools:ignore="MissingTranslation">连接设置</string>
    <string name="privateMode" tools:ignore="MissingTranslation">保密模式（一对一扫码连接）</string>
    <string name="namesetting" tools:ignore="MissingTranslation">名称设置</string>
    <string name="fast" tools:ignore="MissingTranslation">流畅</string>
    <string name="high" tools:ignore="MissingTranslation">高</string>
    <string name="middle" tools:ignore="MissingTranslation">中</string>
    <string name="low" tools:ignore="MissingTranslation">低</string>
    <string name="isclearcache" tools:ignore="MissingTranslation">是否清除缓存？</string>
    <string name="save" tools:ignore="MissingTranslation">保存</string>
    <string name="close_" tools:ignore="MissingTranslation">关闭</string>
    <string name="write_here" tools:ignore="MissingTranslation">请在此处输入...</string>
    <string name="sendto" tools:ignore="MissingTranslation">发送到启目</string>
    <string name="deleteshow" tools:ignore="MissingTranslation">删除启目的显示</string>
    <string name="name" tools:ignore="MissingTranslation">名称</string>
    <string name="t_s" tools:ignore="MissingTranslation">允许投屏内容被分享</string>
    <string name="expand" tools:ignore="MissingTranslation">满屏设置</string>
    <string name="about_propose">意见反馈</string>
    <string name="propose_tip_add_text">　请输入遇到的问题或者建议?</string>
    <string name="propose_tip_add_way">　请输入联系方式（QQ）</string>
    <string name="screen_wifi_scan">扫一扫上方二维码，与我连接</string>
    <string name="screen_no_wifi">请连接wifi或者开启热点网络...</string>
    <string name="screen_wifi_scan_title">扫码好友二维码，连接好友终端</string>
</resources>