<LinearLayout 
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:gravity="center"
    
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
       
     <LinearLayout 
           android:background="@drawable/linear_shap"
         android:layout_width="@dimen/xt290dp"
    android:layout_height="@dimen/xt250dp"
    android:orientation="vertical"
       >
       <TextView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/tpsetting"
        android:textSize="@dimen/xt18sp"  
        android:textColor="@color/black"
        android:gravity="center"
      android:layout_weight="1"
        />   
            <TextView 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_shadow"
        />
         <LinearLayout 
                  android:layout_width="fill_parent"
        android:layout_height="fill_parent"
          android:layout_weight="0.8"
         android:gravity="center_vertical"
          android:orientation="horizontal"
             >
      <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/qingxi"
    android:textColor="@color/xt575757"
    android:textSize="@dimen/xt15sp"
    android:layout_marginLeft="@dimen/xt20dp"
        />  
            <RadioGroup 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/radiogroup1"
    android:layout_marginLeft="@dimen/xt15dp"
    >
<RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/a0"
    android:text="@string/gaoqing"
    android:button="@drawable/radio"
    android:textColor="@color/xt575757"
    android:paddingLeft="@dimen/xt5dp"
    android:textSize="@dimen/xt15sp"
    />
<RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/a1"
    android:text="@string/biaoqing"
    android:button="@drawable/radio"
    android:paddingLeft="@dimen/xt5dp"
    android:layout_marginLeft="@dimen/xt50dp"
    android:textColor="@color/xt575757"
    android:textSize="@dimen/xt15sp"
    android:checked="true"
    />
</RadioGroup> 
         </LinearLayout>
         <LinearLayout 
                  android:layout_width="fill_parent"
        android:layout_height="fill_parent"
          android:layout_weight="1"
          android:visibility="gone"
          android:gravity="center_vertical"
          android:orientation="horizontal"
             >
           <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fast"
        android:layout_marginLeft="@dimen/xt20dp"
    	android:textColor="@color/xt575757"
    	android:textSize="@dimen/xt15sp"
        />  
                       <RadioGroup 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginLeft="@dimen/xt15dp"
       android:id="@+id/radiogroup2"
    >
<RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/b0"
    android:text="@string/high"
    android:paddingLeft="@dimen/xt5dp"
     android:button="@drawable/radio"
    android:textColor="@color/xt575757"
    	android:textSize="@dimen/xt15sp"
    />
<RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/b1"
    android:text="@string/middle"
     android:button="@drawable/radio"
     android:layout_marginLeft="@dimen/xt30dp"
    android:textColor="@color/xt575757"
    	android:textSize="@dimen/xt15sp"
    	android:paddingLeft="@dimen/xt5dp"
    android:checked="true"
    />
<RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/b2"
    android:text="@string/low"
     android:button="@drawable/radio"
     android:layout_marginLeft="@dimen/xt30dp"
    android:textColor="@color/xt575757"
    	android:textSize="@dimen/xt15sp"
    	android:paddingLeft="@dimen/xt5dp"
    android:checked="true"
    />
</RadioGroup>   
         </LinearLayout>
         
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/show_permit"
      android:gravity="center_vertical"
      android:layout_marginBottom="@dimen/xt5dp"
      >
     <!--  <Button 
          android:layout_width="@dimen/xt25dp"
          android:layout_height="@dimen/xt25dp"
          android:background="@drawable/chebox1"
          android:id="@+id/chebox"
          android:layout_marginLeft="@dimen/xt20dp"
          /> -->
      
      <CheckBox 
          android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:button="@drawable/check_button"
    android:id="@+id/chebox"
          android:layout_marginLeft="@dimen/xt20dp"
          />
      <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/t_s"
    android:textColor="@color/gray"
    android:textSize="@dimen/xt13sp"
    android:layout_marginLeft="@dimen/xt6dp"
        />
  </LinearLayout>       
    <LinearLayout 
        android:layout_marginTop="@dimen/xt5dp"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:id="@+id/expand_permit"
      android:gravity="center_vertical"
      android:layout_marginBottom="@dimen/xt5dp"
      >
     <!--  <Button 
          android:layout_width="@dimen/xt25dp"
          android:layout_height="@dimen/xt25dp"
          android:background="@drawable/chebox1"
          android:id="@+id/chebox"
          android:layout_marginLeft="@dimen/xt20dp"
          /> -->
      
      <CheckBox 
          android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:button="@drawable/check_button"
    android:id="@+id/expand"
          android:layout_marginLeft="@dimen/xt20dp"
          />
      <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/expand"
    android:textColor="@color/gray"
    android:textSize="@dimen/xt13sp"
    android:layout_marginLeft="@dimen/xt6dp"
        />
  </LinearLayout>  
          <TextView 
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_shadow"
        />
    <LinearLayout 
     android:layout_width="fill_parent"
        android:layout_height="fill_parent"
          android:layout_weight="1"
          android:gravity="center"
          android:orientation="horizontal"
    >
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
   		android:id="@+id/comfirm"
        android:background="@drawable/dialog_button1"
        android:text="@string/ok"
        android:textSize="@dimen/xt15sp"
        android:textColor="@color/blue"
        />
    <TextView 
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/gray_shadow"
        />
     <Button 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
   		android:id="@+id/cancel"
       android:background="@drawable/dialog_button2"
        android:text="@string/cancel"
        android:textSize="@dimen/xt15sp"
         android:textColor="@color/blue"
      
        />
</LinearLayout>
    </LinearLayout>
</LinearLayout>
    
