<LinearLayout 
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:gravity="center"
    
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
      
    android:background="@drawable/linear_shap"
         android:layout_width="@dimen/xt250dp"
             android:gravity="center"
              android:orientation="vertical"
    android:layout_height="@dimen/xt160dp"
        >
     
<!--         android:background="@drawable/skip" -->
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
       
        android:text="@string/isclearcache"
        android:textSize="@dimen/xt16sp"  
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        
      android:layout_weight="1"
        />
    

       <TextView 
       android:layout_width="fill_parent"
       android:layout_height="0.5dp"
       android:background="@color/gray_shadow"
       />

<LinearLayout 
     android:layout_width="fill_parent"
        android:layout_height="fill_parent"
          android:layout_weight="2"
          android:gravity="center"
    >
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
   		android:id="@+id/comfirm"
        android:background="@drawable/dialog_button1"
        android:text="@string/ok"
        android:textSize="@dimen/xt15sp"
        android:textColor="@color/blue"
        />
    <TextView 
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/gray_shadow"
        />
     <Button 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
   		android:id="@+id/cancel"
       android:background="@drawable/dialog_button2"
        android:text="@string/cancel"
        android:textSize="@dimen/xt15sp"
         android:textColor="@color/blue"
      
        />
</LinearLayout>
</LinearLayout>
</LinearLayout>
    
