<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:orientation="vertical"
       android:gravity="center"
       >
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/screen_no_wifi"
        android:visibility="gone"
        android:gravity="center">
        <ImageView
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/screen_no_net"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/screen_wifi_dialog_text"
            android:text="@string/screen_no_wifi"/>

    </LinearLayout>

     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screen_wifi_scan"
        android:gravity="center"
         android:visibility="visible"
        android:orientation="vertical">

       <ImageView
               android:layout_marginTop="30dp"
               android:layout_margin="10dp"
               android:id="@+id/image"
               android:layout_width="220dp"
               android:layout_height="220dp"
               android:layout_centerInParent="true"
               android:src="@mipmap/ic_launcher"/>

       <TextView
           android:layout_marginTop="5dp"
           android:id="@+id/netName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="16sp"
           android:textColor="@color/screen_wifi_dialog_text"
           android:text="@string/screen_wifi_scan"/>


           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:gravity="center"
               android:text="or" />

           <Button
               android:layout_marginTop="5dp"
               android:id="@+id/wifi_scan"
               android:layout_width="140dp"
               android:layout_height="30dp"
               android:background="@mipmap/screen_scan_to_scan"/>

           <TextView
               android:layout_margin="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="14sp"
               android:textColor="@color/screen_wifi_dialog_text"
               android:text="@string/screen_wifi_scan_title"/>

       </LinearLayout>



   </LinearLayout>

