<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/back_icon"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:onClick="back"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_propose"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/propose_add_text_border"
        android:minHeight="200dp"
        android:onClick="edit"
        android:padding="1dp">

        <EditText
            android:id="@+id/text_su"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#FFFFFF"
            android:hint="@string/propose_tip_add_text"
            android:maxLength="500"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textColorHint="#bebfbf" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />


    <EditText
        android:id="@+id/text_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/propose_add_text_border"
        android:hint="@string/propose_tip_add_way"
        android:inputType="phone"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="#bebfbf" />


    <ImageView
        android:id="@+id/propose_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:scaleType="fitXY"
        android:src="@mipmap/propose_commit" />

</LinearLayout>